--- a/contact.html
+++ b/contact.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <h4> <u>Contact details</u></h4>
-    <form action="">
+    <form action="mailto:j.saikumar174@gmail.com" method="post" enctype="text/plain" >
         <label for="name">Your Name: </label>
-        <input type="name" name="" id="name" placeholder="Name">
+        <input type="name" name="Your Name " id="name" placeholder="Name">
         <br>
         <label for="email">Your Email: </label>
-        <input type="email" name="" id="email" placeholder="abc@email.com" >
+        <input type="email" name="Your Email " id="email" placeholder="abc@email.com" >
         <br>
         <p>Message:</p>
-        <textarea name="" id="" cols="32" rows="6" placeholder="Description ..."></textarea>
+        <textarea name="Your message " id="" cols="32" rows="6" placeholder="Description ..."></textarea>
         <br>
         <input type="submit" value="Submit">
     </form>
