--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <li>MySQL</li>
         <li>HTML/CSS</li>
     </ul>
-    <h5>PERSONA SKILLS</h5>
+    <h5>PERSONAL SKILLS</h5>
     <ul>
         <li>Problem solving mindset</li>
         <li>Logical thinker</li>
